# pyfssa

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements-test.txt  tox.ini
docs/: tutorial.ipynb  verification.ipynb
fssa/: fssa.py  optimize.py
fssa/test/: debug_test.ipynb
