[build-system]
requires = ["setuptools<45.0.0", "wheel<0.38.0", "setuptools_scm<6.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fssa"
version = "0.7.6"
description = "Fast SSA: A fast implementation of Singular Spectrum Analysis"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Feng Wang", email = "wangfeng.w@gmail.com"},
]

[tool.setuptools]
packages = ["fssa"]
